# xorm

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml  expanded.rs  out.rs
example/src/: main.rs
src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
x-orm-cli/: Cargo.toml
x-orm-cli/src/: arguments.rs  commands.rs  main.rs
xorm/: Cargo.toml
xorm-cli/: Cargo.toml  README.md
xorm-cli/src/: main.rs
xorm-core/: Cargo.toml
xorm-core/src/: types.rs
xorm_cli/: Cargo.toml
xorm_cli/src/: main.rs
xorm_macro/: Cargo.toml
xorm_macro/src/: destroy.rs  find.rs  find_by_pk.rs  lib.rs
xorm_macro_core/: Cargo.toml
xorm_macro_core/src/: destroy.rs  find.rs  find_by_pk.rs  lib.rs
