[package]
description = "Simplistic and asynchronous ORM for Rust"
edition = "2021"
name = "xorm"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
exclude = [
  "sandbox",
  "example",
  "tests",
]
members = [
  "xorm_cli",
  "xorm_macro", # "xorm_macro",  # "example"
]
[dependencies]
async-trait = "0.1.64"
syn = "1.0"
tokio = {version = "1.25.0", features = ["full"]}
tokio-postgres = "0.7.7"
