[package]
edition = "2021"
name = "example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = "0.7.7"
xorm = {path = "../"}
xorm_macro = {path = "../xorm_macro"}
