[package]
description = "Simplistic and asynchronous ORM for Rust"
edition = "2021"
name = "xorm_cli"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.6", features = ["derive"]}
console = "0.15.5"
dotenv = "0.15.0"
